<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">无线慧</string>
    <string name="action_settings">Settings</string>
    <string name="hint_input">输入要查询的ID</string>
    <string name="btn_submit">提交</string>
    <string name="tv_default">显示返回值</string>
    <string name="menu_volley">volley请求</string>
    <string name="title_activity_login">wuxianhui</string>
    <string name="login">登录</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘了密码？</string>
    <string name="regist">注册</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="remember_me">记住我</string>
    <string name="title_activity_regist">注册</string>
    <string name="telephone_number_hint">输入手机号码</string>
    <string name="send_vertification_code">接收验证码</string>
    <string name="vertification_code_hint">短信验证码</string>
    <string name="follow_rule">遵守无线慧服务规则，</string>
    <string name="confrim_password_hint">确认密码</string>
    <string name="server_port">http://192.168.1.108:8080/WuxianhuiServer</string>
    <string name="click_login_user">点击登录</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="current_order">当前下单</string>
    <string name="i_will_order">我要下单</string>
    <string name="call_waiter">呼叫服务员</string>
    <string name="pay_bill">结账</string>
    <string name="bill_history">历史下单</string>
    <string name="title_activity_place_order">我要下单</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_current_order">当前下单</string>
	<string name="a_order">来一份</string>
	<string name="a_order_again">再来一份</string>
	<string name="will_commit">未提交</string>
	<string name="commit">提交</string>
	<string name="commited">已提交</string>
	<string name="delete">移除</string>
    <string name="wifi_provider">WIFI服务提供者</string>
    <drawable name="black">#000000</drawable>
    <string name="scan_db">/mnt/sdcard/ArcGIS/Campus/scan.db</string>
    <string name="wificonnectinfo">      </string>
    <string name="longu">welcome to longhu</string>
    <drawable name="white">#FFFFFF</drawable>
</resources>
