<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:focusable="true"  
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/telephone_number_regist"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/phone"
        android:ems="10"
        android:hint="@string/telephone_number_hint"
        android:inputType="phone" />
    <EditText
        android:id="@+id/password_regist"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/telephone_number_regist"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

	<View
	    android:id="@+id/horizon"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/password_regist"
	    android:background="@color/faint_yellow" />

	<EditText
	    android:id="@+id/telephone_vertification_code"
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/confirm_regist"
	    android:layout_toLeftOf="@+id/send_vertification_code"
	    android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
	    android:ems="10"
	    android:drawableLeft="@drawable/magnet"
	    android:hint="@string/vertification_code_hint"
	    android:inputType="number" />

    <EditText
        android:id="@+id/confirm_regist"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/horizon"
        android:background="@drawable/bg_edittext"
	    android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:hint="@string/confrim_password_hint"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/regist_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/telephone_vertification_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_alibuybutton"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/regist"
        android:textSize="22sp" />

    <Button
        android:id="@+id/send_vertification_code"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/telephone_vertification_code"
        android:layout_alignBottom="@+id/telephone_vertification_code"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_alibuybutton"
        android:text="@string/send_vertification_code"
        android:textColor="@color/blue"
        android:textSize="18sp" />

</RelativeLayout>