<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/current_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_alibuybutton"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/current_order" />

    <Button
        android:id="@+id/i_will_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_order"
        android:layout_below="@+id/current_order"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_alibuybutton"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/i_will_order" />

    <Button
        android:id="@+id/pay_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/i_will_order"
        android:layout_alignRight="@+id/i_will_order"
        android:layout_below="@+id/i_will_order"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_alibuybutton"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/pay_bill" />

    <Button
        android:id="@+id/bill_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pay_bill"
        android:layout_below="@+id/pay_bill"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_alibuybutton"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/bill_history" />

</RelativeLayout>